# ProjectPrac

MailModule/: CMakeLists.txt  main.cpp  smtp_mail_sender.cpp  smtp_mail_sender.h  test-mail.txt
Producer-Consumer/: main  main.cpp
calculator/: CMakeLists.txt  main.cpp
calculator/.cache/clangd/index/: main.cpp.388B7B966526ACC9.idx
